--- a/spec/fixtures/event/participations.yml
+++ b/spec/fixtures/event/participations.yml
@@ -5,17 +5,17 @@
 
 top_leader:
   event: top_course
-  person: leader
+  person: pl_jugend
   active: true
 
 top_course_applicant:
   event: top_course
-  person: member
+  person: thun_member
   active: false
   application: top_course_applicant
 
 top_participant:
   event: top_event
-  person: member
+  person: thun_member
   active: true
   application: top_participant
