--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,8 +7,7 @@
 # Settings relevant for the hitobito_pro_natura wagon
 # Overrides settings from the main application
 application:
-  languages:
-    de: Deutsch
+  additional_languages:
     fr: Français
     it: Italiano
 
