Reintroduce french and italian as normal languages for them to be available in translation picker

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,7 +7,8 @@
 # Settings relevant for the hitobito_pro_natura wagon
 # Overrides settings from the main application
 application:
-  additional_languages:
+  languages:
+    de: Deutsch
     fr: Français
     it: Italiano
 
