--- a/spec/fixtures/event/participations.yml
+++ b/spec/fixtures/event/participations.yml
@@ -5,17 +5,20 @@
 
 top_leader:
   event: top_course
-  person: pl_jugend
+  participant: pl_jugend
+  participant_type: Person
   active: true
 
 top_course_applicant:
   event: top_course
-  person: thun_member
+  participant: thun_member
+  participant_type: Person
   active: false
   application: top_course_applicant
 
 top_participant:
   event: top_event
-  person: thun_member
+  participant: thun_member
+  participant_type: Person
   active: true
   application: top_participant
